[gd_scene load_steps=6 format=3 uid="uid://bpjphlt4fitjp"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_3b3kk"]
[ext_resource type="Texture2D" uid="uid://3srmriq07jxr" path="res://assets/ui/menu/cover_notitles_cropped.jpg" id="1_d3tuw"]
[ext_resource type="Texture2D" uid="uid://buqvg6vxbfnkw" path="res://assets/ui/menu/title.png" id="2_tq4yj"]
[ext_resource type="Texture2D" uid="uid://3uojmlmh3gx8" path="res://assets/ui/menu/mouse_diagram.png" id="3_76wsb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4vst3"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3b3kk")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_d3tuw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -630.0
offset_top = -400.0
offset_right = 630.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 100
theme_override_constants/margin_bottom = 100

[node name="Sections" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Title" type="TextureRect" parent="Panel/MarginContainer/Sections"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
texture = ExtResource("2_tq4yj")
stretch_mode = 5

[node name="Start" type="Button" parent="Panel/MarginContainer/Sections"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 42
text = "START"

[node name="HowToPlay" type="Button" parent="Panel/MarginContainer/Sections"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 42
text = "HOW TO PLAY"

[node name="Quit" type="Button" parent="Panel/MarginContainer/Sections"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 42
text = "QUIT"

[node name="HowToPlay" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -500.0
offset_right = 300.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sections" type="VBoxContainer" parent="HowToPlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="HowToPlay/Sections"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxEmpty_4vst3")
text = "How to Play"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Objective" type="VBoxContainer" parent="HowToPlay/Sections"]
layout_mode = 2

[node name="Title" type="Label" parent="HowToPlay/Sections/Objective"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_4vst3")
text = "Objective"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Description" type="Label" parent="HowToPlay/Sections/Objective"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxEmpty_4vst3")
text = "Defend the outpost from incoming enemies."
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Controls" type="VBoxContainer" parent="HowToPlay/Sections"]
layout_mode = 2

[node name="Title" type="Label" parent="HowToPlay/Sections/Controls"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxEmpty_4vst3")
text = "Controls"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Instructions" type="HBoxContainer" parent="HowToPlay/Sections/Controls"]
layout_mode = 2

[node name="MouseImg" type="TextureRect" parent="HowToPlay/Sections/Controls/Instructions"]
layout_mode = 2
texture = ExtResource("3_76wsb")

[node name="Labels" type="Control" parent="HowToPlay/Sections/Controls/Instructions"]
layout_mode = 2

[node name="Select" type="Label" parent="HowToPlay/Sections/Controls/Instructions/Labels"]
layout_mode = 2
offset_left = -185.5
offset_top = 46.0
offset_right = 251.5
offset_bottom = 67.0
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxEmpty_4vst3")
text = "Select"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="MoveCamera" type="Label" parent="HowToPlay/Sections/Controls/Instructions/Labels"]
layout_mode = 2
offset_left = -70.5
offset_top = 84.0
offset_right = 366.5
offset_bottom = 105.0
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxEmpty_4vst3")
text = "Move camera (click and drag)"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Zoom" type="Label" parent="HowToPlay/Sections/Controls/Instructions/Labels"]
layout_mode = 2
offset_left = -149.5
offset_top = 129.0
offset_right = 287.5
offset_bottom = 150.0
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxEmpty_4vst3")
text = "Zoom (scroll)"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Esc" type="Label" parent="HowToPlay/Sections/Controls/Instructions/Labels"]
layout_mode = 2
offset_left = -153.5
offset_top = 190.5
offset_right = 283.5
offset_bottom = 211.5
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxEmpty_4vst3")
text = "Esc to pause"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Back" type="Button" parent="HowToPlay/Sections/Controls"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Back"

[connection signal="pressed" from="Panel/MarginContainer/Sections/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/Sections/HowToPlay" to="." method="_on_how_to_play_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/Sections/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="HowToPlay/Sections/Controls/Back" to="." method="_on_back_pressed"]
